fix social icons mobile alignment

--- a/src/assets/css/auth/authPages.css
+++ b/src/assets/css/auth/authPages.css
@@ -50,6 +50,8 @@
   width: 100%;
   height: 5rem;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
 
 .auth .or-divider {
