--- a/src/components/socialAuth/socialAuth.css
+++ b/src/components/socialAuth/socialAuth.css
@@ -1,7 +1,7 @@
 .socialPill {
-  width: 110px !important;
-  height: 35px !important;
-  border-radius: 2rem !important;
+  width: 15rem !important;
+  height: 5rem !important;
+  border-radius: 3rem !important;
   display: flex !important;
   justify-content: space-around !important;
   align-items: center !important;
@@ -27,3 +27,10 @@
   align-items: center;
   background: #fff;
 }
+
+  @media (min-width: 768px) {
+    .socialPill {
+      width: 110px !important;
+      height: 35px !important;
+    }
+        }
